provisioning/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-user-dep
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-user
  template:
    metadata:
      labels:
        app: my-user
    spec:
      containers:
        - name: my-fw-cont
          image: letanthang/my-user
          ports:
            - containerPort: 80
              name: web
          resources:
            requests:
              memory: "50Mi"
              cpu: "50m"
            limits:
              memory: "75Mi"
              cpu: "75m"
