provisioning/k8s/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: APP_NAME-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: APP_NAME
spec:
  rules:
    - host: go3008.info
      http:
        paths:
          - path: /api/v1/public/user
            backend:
              serviceName: APP_NAME-s
              servicePort: APP_NAME-s
          - path: /api/v1/staff/user
            backend:
              serviceName: APP_NAME-s
              servicePort: APP_NAME-s
          - path: /api/v1/private/user
            backend:
              serviceName: APP_NAME-s
              servicePort: APP_NAME-s
---
